# harmony-web-harness

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
harness/agents/: auction_researcher.yaml  event_planner.yaml  summariser.yaml
harness/api/: app.py  deps.py  gateway.py
harness/capabilities/: web_research.py
harness/channels/: app.py  base.py  telegram.py
harness/core/: models.py  registry.py  settings.py
harness/gateway/: normaliser.py  screen.py
harness/state/: history.py  rag.py  vault.py
harness/thread/: floor.py  handover.py  invocation_gate.py  locale.py  router.py
scripts/: harness.postman_collection.json  stub_nest_app.py
system-design/: README.md  agent-harness-system-design.md
system-design/diagrams/src/: 01-high-level-architecture.mmd  02-handover-sequence.mmd  03-trading-risk-gate.mmd  04-deployment-topology.mmd  05-control-plane.mmd  06-worker-lifecycle.mmd
system-design/mockups/: platform-console.html  tenant-console.html
tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
